src/test/ui/feature-gate-global_allocator.stderr
error[E0658]: the `#[global_allocator]` attribute is an experimental feature
  --> $DIR/feature-gate-global_allocator.rs:11:1
   |
11 | #[global_allocator] //~ ERROR: attribute is an experimental feature
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(global_allocator)] to the crate attributes to enable

error: aborting due to previous error

